--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,56 @@ footer a:hover {
     text-decoration: underline;
     color: var(--cor1);
 }
+
+@media (min-width: 360px) {
+    header > h1 {
+        color: #fff;
+        font-family: var(--fonte-destaque);
+        font-size: 2em;
+        font-weight: normal;
+        margin-bottom: 20px;
+        text-align: center;
+        text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.267);
+    }
+
+    header > p {
+        padding-bottom: 10px;
+        color: #fff;
+        font-family: var(--fonte-padrao);
+        font-size: 1em;
+        max-width: 400px;
+        padding-right: 10px;
+        padding-left: 10px;
+        margin: auto;
+    }
+
+    nav {
+        font-size: .7em;
+        background-color: var(--cor5);
+        padding: 10px 0px 10px 5px;
+        box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.527);
+    }
+    
+    nav > a {
+        color: var(--cor1);
+        padding: 3px;
+        border-radius: 7px;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    nav > a:hover {
+        background-color: var(--cor3);
+        color: var(--cor4);
+        transition: all .8s ease;
+    
+    }
+
+    main h1 {
+        font-weight: normal;
+        font-family: var(--fonte-android);
+        color: var(--cor5);
+        font-size: 1em;
+    }
+    
+}
